# ColoredPrint

./: Cargo.toml  README.md
src/: editing.rs  lib.rs  styling.rs
src/styling/: color.rs  reader.rs  style.rs  style_effect.rs  text_style.rs
