[package]
name = "colored-print"
version = "0.1.3"
authors = ["BioTomateDE <biotomatede@proton.me>"]
edition = "2024"
rust-version = "1.85.1"
description = "Concise syntax for colors and styles in a format string literal"
readme = "./README.md"
repository = "https://codeberg.org/BioTomateDE/ColoredPrint"
license = "Apache-2.0 OR MIT"
keywords = ["color", "text", "print", "styling", "cli"]
categories = [
    "command-line-interface",
    "template-engine",
    "development-tools",
    "value-formatting",
]

[lib]
proc-macro = true

[features]
default = []
no-color = []

[badges]
maintenance.status = "as-is"

[dependencies]
quote = "1.0"
syn = "2.0"
